<resources>
    <string name="app_name">QR Code</string>
    <string name="import_text">Import</string>
    <string name="scanner">Scanner</string>
    <string name="history">History\n</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_qr_codes">No QR codes scanned yet</string>
    <string name="open_qr">Open QR scanner</string>
    <string name="create_qr">Create QR code</string>
    <string name="qr_code_type">QR Code Type</string>
    <string name="what_qr_code">What QR Code would you like to create?</string>
    <string name="location">Location</string>
    <string name="url">URL</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
    <string name="insert_text">Insert text</string>
    <string name="https">https://</string>
    <string name="longtitude">Longtitude</string>
    <string name="latitude">Latitude</string>
    <string name="recipient_s_email">Recipient\'s email</string>
    <string name="subject">Subject</string>
    <string name="insert_an_email">Insert an Email</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
</resources>