<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/qr_code_type"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <TextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/what_qr_code"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noData">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_url" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/url"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/url"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:background="@color/transparent"
                android:src="@drawable/ic_forward" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/loc"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_forward" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/email"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_forward" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/text"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/txt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_forward" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
