<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:src="@drawable/ic_back" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createQR"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/buttom_shape"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="@color/buttonTextColor"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/url"/>

        <EditText
            android:id="@+id/edurl"
            android:layout_width="374dp"
            android:layout_height="58dp"
            android:layout_margin="10dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:hint="@string/https"
            android:inputType="text"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/ivQRCode"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
