<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="99dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_qr_codes"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintTop_toBottomOf="@+id/noData"
        tools:layout_editor_absoluteX="-28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/createqr"
                    android:layout_width="172dp"
                    android:layout_height="48dp"
                    android:background="@drawable/buttom_shape"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_qr"
                    android:textColor="@color/buttonTextColor"
                    android:padding="16dp"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/clear"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/outline_cleaning_services_24"
                android:background="@color/transparent"
                android:visibility="gone" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/create_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded"
                app:itemIconTint="@color/black"
                app:itemTextAppearanceActive="@style/BottomNavTextActive"
                app:itemTextAppearanceInactive="@style/BottomNavTextInactive"
                app:itemTextColor="@color/black"
                app:labelVisibilityMode="selected"
                app:menu="@menu/buttom_menu" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
